[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/MailMenu.gd" id="1"]

[node name="MailMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.08, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "CORREOS"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="InfoPanel" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="VBoxContainer/InfoPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Correos recibidos"
theme_override_font_sizes/font_size = 16

[node name="BackButton" type="Button" parent="VBoxContainer/InfoPanel"]
layout_mode = 2
text = "Volver"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MailsContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
